# alfred

./: .gitignore  Cargo.toml  arion-compose.nix  arion-pkgs.nix  cloudflared.yaml  flake.nix  package.json
alfred-ts/alfred-core/: .gitignore  README.md  package.json  tsconfig.json
alfred-ts/alfred-core/src/: index.ts
crates/alfred-core/: Cargo.toml
crates/alfred-core/src/: main.rs
crates/alfred-core/src/actors/: notifications.rs
data/: .gitignore
data/traefik/: dynamic_conf.yaml  traefik.yaml
dgraph/: docker-compose.yaml
input/: daylio.py
prisma/: schema.prisma
tf/: .gitignore  main.tf
tf/infra/: core.tf
