[package]
name = "alfred-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

async-std = { version = "1.8.0", features = ["attributes"] }

tide = "0.16.0"

fort = "0.4"
bastion = "0.4"
