[package]
name = "alfred-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.26"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

async-std = { version = "1.8.0", features = ["attributes"] }

bastion = "0.4"
# fort = "0.4"

femme = "2.2.1"
tide = "0.16.0"
